==> davihdsantos/NuttX/arch/arm/src/lpc43xx/lpc43_adc.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <semaphore.h>
#include <errno.h>
#include <assert.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/analog/adc.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "lpc43_adc.h"
#include "lpc43_cgu.h"
#include "lpc43_scu.h"
#include "lpc43_ccu.h"
#include "lpc43_creg.h"
#include "hardware/lpc43_gima.h"
#include "hardware/lpc43_timer.h"
#include "lpc43_pinconfig.h"
#include <arch/board/board.h>
#  define CONFIG_LPC43_ADC0_MASK 0x01
#  define CONFIG_LPC43_ADC0_FREQ 0
#define LPC43_ADC_MAX_FREQUENCY  4500000
#define LPC43_ADC_MIN_FREQUENCY  (BOARD_ABP3_FREQUENCY/256)
#  define CONFIG_LPC43_ADC0_USE_TIMER 0

static void adc_reset(FAR struct adc_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;
  irqstate_t flags;
  uint32_t regval;

  if (priv->m_ch) /* calc MSB */
    {
      priv->mask_int |= (priv->mask_int >> 1);
      priv->mask_int |= (priv->mask_int >> 2);
      priv->mask_int |= (priv->mask_int >> 4);
      priv->mask_int &= ~(priv->mask_int >> 1);
    }

  flags = enter_critical_section();

  /* Clock peripheral */

  regval  = getreg32(LPC43_CCU1_APB3_ADC0_CFG);
  regval |= CCU_CLK_CFG_RUN;
  putreg32(regval, LPC43_CCU1_APB3_ADC0_CFG);

  /* Calc config value */

  regval  = ADC_CR_PDN;
  regval |= priv->mask;

  if (priv->freq != 0)
    {
      if (priv->timer)
        {
          /* Start adc on timer */

          regval |= ADC_CR_START_CTOUT8;

          /* enable timer out in creg */

          uint32_t regval_timer = getreg32(LPC43_CREG6);
          regval_timer &= ~CREG6_CTOUTCTRL;
          putreg32(regval_timer, LPC43_CREG6);

          /* Enable synch timer 2 match 0 to adc */

          putreg32(GIMA_EDGE | GIMA_SYNCH | GIMA_ADC1_SELECT_T2MAT0,
                   LPC43_GIMA_ADCSTART1);

          /* Power on */

          regval_timer  = getreg32(LPC43_CCU1_M4_TIMER2_CFG);
          regval_timer |= CCU_CLK_CFG_RUN;
          putreg32(regval_timer, LPC43_CCU1_M4_TIMER2_CFG);

          putreg32(0, LPC43_TIMER2_BASE+LPC43_TMR_TCR_OFFSET); /* disable */
          putreg32(TMR_MCR_MR0R, LPC43_TIMER2_BASE+LPC43_TMR_MCR_OFFSET); /* reset on match only */
          putreg32(0, LPC43_TIMER2_BASE+LPC43_TMR_CCR_OFFSET); /* do not use capture */
          putreg32(TMR_EMR_EMC0_SET, LPC43_TIMER2_BASE+LPC43_TMR_EMR_OFFSET); /* external match */
          putreg32(0, LPC43_TIMER2_BASE+LPC43_TMR_CTCR_OFFSET); /* counter/timer mode */

          putreg32(LPC43_CCLK/priv->freq/2-1, LPC43_TIMER2_BASE+LPC43_TMR_PR_OFFSET); /* set clock, divide by 2 - bug in chip */

          putreg32(1, LPC43_TMR2_MR0); /* set match on 1 */
        }
      else
        {
          uint32_t clkdiv = BOARD_ABP3_FREQUENCY / priv->freq +
                           (BOARD_ABP3_FREQUENCY % priv->freq != 0) - 1;
          regval |= clkdiv << ADC_CR_CLKDIV_SHIFT;
        }
    }

  putreg32(regval, LPC43_ADC0_CR);

  /* Do pin configuration if defined */

#ifdef PINCONF_ADC0_C0
  if ((priv->mask & 0x01) != 0)
    {
      lpc43_pin_config(PINCONF_ADC0_C0);
    }
#endif /* PINCONF_ADC0_C0 */

#ifdef PINCONF_ADC0_C1
  if ((priv->mask & 0x02) != 0)
    {
      lpc43_pin_config(PINCONF_ADC0_C1);
    }
#endif /* PINCONF_ADC0_C1 */

#ifdef PINCONF_ADC0_C2
  if ((priv->mask & 0x04) != 0)
    {
      lpc43_pin_config(PINCONF_ADC0_C2);
    }
#endif /* PINCONF_ADC0_C2 */

#ifdef PINCONF_ADC0_C3
  if ((priv->mask & 0x08) != 0)
    {
      lpc43_pin_config(PINCONF_ADC0_C3);
    }
#endif /* PINCONF_ADC0_C3 */

#ifdef PINCONF_ADC0_C4
  if ((priv->mask & 0x10) != 0)
    {
      lpc43_pin_config(PINCONF_ADC0_C4);
    }
#endif /* PINCONF_ADC0_C4 */

#ifdef PINCONF_ADC0_C5
  if ((priv->mask & 0x20) != 0)
    {
      lpc43_pin_config(PINCONF_ADC0_C5);
    }
#endif /* PINCONF_ADC0_C5 */

#ifdef PINCONF_ADC0_C6
  if ((priv->mask & 0x40) != 0)
    {
      lpc43_pin_config(PINCONF_ADC0_C6);
    }
#endif /* PINCONF_ADC0_C6 */

#ifdef PINCONF_ADC0_C7
  if ((priv->mask & 0x80) != 0)
    {
      lpc43_configgpio(PINCONF_ADC0_C7);
    }
#endif /* PINCONF_ADC0_C7 */

  leave_critical_section(flags);
}

static void adc_shutdown(FAR struct adc_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;

  if (priv->timer)
    {
      putreg32(0, LPC43_TIMER2_BASE+LPC43_TMR_TCR_OFFSET); /* disable the timer */
    }

  /* Disable ADC interrupts, both at the level of the ADC device and at the
   * level of the NVIC.
   */

  putreg32(0, LPC43_ADC0_INTEN);
  up_disable_irq(priv->irq);

  /* Then detach the ADC interrupt handler. */

  irq_detach(priv->irq);
}

static void adc_rxint(FAR struct adc_dev_s *dev, bool enable)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;

  if (enable)
    {
      putreg32(priv->mask_int, LPC43_ADC0_INTEN);

      if (priv->timer)
        {
          putreg32(0, LPC43_TIMER2_BASE+LPC43_TMR_PC_OFFSET); /* reset prescale counter */
          putreg32(0, LPC43_TIMER2_BASE+LPC43_TMR_TC_OFFSET); /* reset timer counter */
          putreg32(TMR_TCR_EN, LPC43_TIMER2_BASE+LPC43_TMR_TCR_OFFSET); /* enable the timer */
        }
      else
        {
          uint32_t regval = getreg32(LPC43_ADC0_CR);

          if (priv->freq == 0 && !priv->m_ch)
            {
              regval |= ADC_CR_START_NOW;
            }
          else
            {
              regval |= ADC_CR_BURST;
            }

          putreg32(regval, LPC43_ADC0_CR);
        }
    }
  else
    {
      putreg32(0, LPC43_ADC0_INTEN);
    }
}

static int adc_interrupt(int irq, void *context, FAR void *arg)
{

  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)g_adcdev.ad_priv;
  uint32_t regval;
  int i;

  if (priv->timer)
    {
      putreg32(TMR_EMR_EMC0_SET, LPC43_TIMER2_BASE+LPC43_TMR_EMR_OFFSET); /* put match to low */
    }
  else
    {
      if (priv->freq == 0 && !priv->m_ch) /* clear burst mode */
        {
          regval = getreg32(LPC43_ADC0_CR);
          regval &= ~ADC_CR_BURST;
          putreg32(regval, LPC43_ADC0_CR);
        }
    }

  /* Read data, clear interrupt by this */

  for (i = 0; i < 8; i++)
    {
      if (priv->mask & (1 << i))
        {
          int32_t data;

          regval = getreg32(LPC43_ADC0_DR(i));
          data   = (regval & ADC_DR_VVREF_MASK) >> ADC_DR_VVREF_SHIFT;

          /* Verify that the upper-half driver has bound its callback functions */

          if (priv->cb != NULL)
            {
              /* Perform the data received callback */

              DEBUGASSERT(priv->cb->au_receive != NULL);
              priv->cb->au_receive(&g_adcdev, i, data);
            }
        }
    }

  return OKK;
}

FAR struct adc_dev_s *lpc43_adcinitialize(void)
{
  return &g_adcdev;
}
